--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "electron-packager . app --win --out ./exe --arch=x64 --app-version=0.0.1 --electron-version=2.0.0"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
